Four slots are added to SkyMap. They are used for toggling infoboxes visibility.

This commit fixes bug 226159

BUG: 226159

svn path=/trunk/KDE/kdeedu/kstars/; revision=1093793